# generate-technical-document

./: .gitignore  Public.code-workspace  README.md
code-structure/: .env  README.md  main.py  pyproject.toml  requirements.txt
code-structure/app/: __init__.py  create_document.py  document_splitter.py  generate_document.py  language_model.py  language_separator.py  prompt_generator.py  structured_output.py
code-structure/files/backup/: zdmo_cl_agency.abap  zdmo_sd_agency.abap
generate-technical-document/: .env  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
generate-technical-document/app/: __init__.py  config.py  create_document.py  document_splitter.py  generate_document.py  language_model.py  language_separator.py  prompt_generator.py  structured_output.py
generate-technical-document/files/analyzed_documents/: code_structure.md
generate-technical-document/files/backup/: zdmo_bdef_p_agency.abap  zdmo_bdef_r_agency.abap  zdmo_cl_agency_api.abap  zdmo_dt_agency.abap  zdmo_md_agency.abap  zdmo_p_agency.abap  zdmo_r_agency.abap  zdmo_vh_agency.abap
generate-technical-document/prompts/: analysis_summary_template.md  structure_behavior_template.md  structure_class_template.md  structure_database_template.md  structure_function_module_template.md  structure_report_program_template.md  technical_specification_template.md
readme/: chatOllama.md  code-formatting.md  docker-setup.md  git-setup.md  python-setup.md  tiktoken.md  troubleshooting.md  vs-code-setup.md
